--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <title>{{title}}</title>
-<about>{{about}}<about>
-<heading>{{heading}}<heading>
+<about>{{about}}</about>
+<heading>{{heading}}</heading>
