--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,1 +1,5 @@
-<p>event-list works!</p>
+<app-event-list-item></app-event-list-item>
+<app-event-list-item></app-event-list-item>
+<app-event-list-item></app-event-list-item>
+<app-event-list-item></app-event-list-item>
+
