--- a/src/app/event-list-item/event-list-item.component.html
+++ b/src/app/event-list-item/event-list-item.component.html
@@ -3,6 +3,6 @@
   <h1><strong>Name:</strong> {{ events.Name }}</h1>
   <p>Place: {{ events.place }}</p>
   <p>Type: {{ events.type }}</p>
-  <p><strong>Coordinator:</strong> {{ events.coordinator }}</p>
+  <p><strong>Coordinator:</strong> {{ events.cordinator }}</p>
   <p><strong>Description:</strong> {{ events.description ? events.description : 'No description available.' }}</p>
 </div>
