step 10 11 and 12 done added service in app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="eventsSite">
   <h1>Upcoming Events</h1>
+  <app-event-list-item  *ngIf="events" [events]="events"></app-event-list-item>
 
   <app-event-list></app-event-list>
 
