--- a/src/app/event-list-item/event-list-item.component.html
+++ b/src/app/event-list-item/event-list-item.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="events" class="list-item">
+<div class="list-item">
   <h2>Event Details</h2>
   <h1><strong>Name:</strong> {{ events.Name }}</h1>
   <p>Place: {{ events.place }}</p>
