starting assighemtn 3 again from step 8 as i did next steps wrong and now did step 9 again

--- a/src/app/event-list/event-list.component.html
+++ b/src/app/event-list/event-list.component.html
@@ -1,5 +1,5 @@
-<app-event-list-item></app-event-list-item>
-<app-event-list-item></app-event-list-item>
-<app-event-list-item></app-event-list-item>
-<app-event-list-item></app-event-list-item>
+<app-event-list-item [events] = events[1]></app-event-list-item>
+<app-event-list-item [events] = events[2]></app-event-list-item>
+<app-event-list-item [events] = events[3]></app-event-list-item>
+<app-event-list-item [events] = events[4] ></app-event-list-item>
 
