--- a/src/app/event-list-item/event-list-item.component.html
+++ b/src/app/event-list-item/event-list-item.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="events" class="list-item">
-  <h2>Event Details</h2>
+  <h1>Event Details</h1>
   <h1><strong>Name:</strong> {{ events.Name }}</h1>
-  <p>Place: {{ events.place }}</p>
+  <p><b>Place:</b> {{ events.place }}</p>
   <p>Type: {{ events.type }}</p>
   <p><strong>Coordinator:</strong> {{ events.cordinator }}</p>
   <p><strong>Description:</strong> {{ events.description ? events.description : 'No description available.' }}</p>
