--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="eventsSite">
   <h1>Upcoming Events</h1>
+  <app-event-list-item [events]="selectedEvent" > </app-event-list-item>
+  <br />
 
   <app-event-list></app-event-list>
 
